# YaTable

./: CMakeLists.txt  README.md
cmake/: FindSQLite3.cmake
include/: CMakeLists.txt  YaTableConfig.cmake  mem.h  yatable.h  yatable.pc.in  yatable_api.h  yatable_commit.h  yatable_config.h  yatable_context.h  yatable_def.h  yatable_dict.h  yatable_key.h  yatable_phrase.h  yatable_private.h
src/: CMakeLists.txt  mem.c  yatable.c  yatable_api.c  yatable_commit.c  yatable_config.c  yatable_context.c  yatable_dict.c  yatable_key.c  yatable_phrase.c
