CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(yatable)

SET(prefix ${CMAKE_INSTALL_PREFIX})
SET(LIBYATABLE_VERSION 0.0.1)
SET(LIBYATABLE_SOVERSION 0)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
INCLUDE(FindPkgConfig)
FIND_PACKAGE(SQLite3 REQUIRED)

SET(CMAKE_C_FLAGS "-Wall -fvisibility=hidden ${CMAKE_C_FLAGS}")
SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--as-needed ${CMAKE_SHARED_LINKER_FLAGS}")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(include)
